PROJECT(yenc)
SET( CMAKE_VERBOSE_MAKEFILE OFF )
SET( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" )
FIND_PACKAGE( Boost REQUIRED )
FIND_PACKAGE( libsigc REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} ${LIBSIGC_INCLUDE_DIRS} )
SET( SRC ydecoder.cpp )
LINK_DIRECTORIES( ${Boost_LIBRARY_DIRS} )
ADD_EXECUTABLE( ydecoder ${SRC} )
TARGET_LINK_LIBRARIES( ydecoder  ${LIBSIGC_LIBRARY} boost_filesystem )
