FIND_PACKAGE( Boost REQUIRED )
FIND_PACKAGE( libsigc REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} ${LIBSIGC_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
LINK_DIRECTORIES( ${Boost_LIBRARY_DIRS} )
ADD_LIBRARY( ydecoder SHARED ydecoder.cpp )
ADD_EXECUTABLE( ydec ydec.cpp )
TARGET_LINK_LIBRARIES( ydecoder ${LIBSIGC_LIBRARY} boost_filesystem )
TARGET_LINK_LIBRARIES( ydec ydecoder )
INSTALL( TARGETS ydecoder LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )